pkg/gox/testdata/errors/namespace.gox
package demo

func View() any {
	return <ui.Button />
}
